Fix text align issue in css

--- a/foundations/intro-to-css/05-descendant-combinator/style.css
+++ b/foundations/intro-to-css/05-descendant-combinator/style.css
@@ -4,6 +4,6 @@
     background-color: yellow;
     color: red;
     font-size: 20px;
-    text-decoration: center;
+    text-align: center;
   }
   
